# Retune

./: config.py  i18n.py  main.py  readme.md  requirements.txt
audio/: player.py  processor.py
audio/engine/: CMakeLists.txt  engine.cpp  player.cpp  player.hpp
ui/: language_dialog.py  main_window.py
ui/widgets/: card.py  dev_monitor.py  waveform.py
